Post on MHD Riemann Problems

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,13 @@
 {
     "cSpell.words": [
+        "Alfvên",
         "disqus",
+        "Einfeldt",
         "Laney",
-        "pthreads"
+        "Miniati",
+        "Miyoshi",
+        "Munz",
+        "pthreads",
+        "Teuben"
     ]
 }
