--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ timezone: America/New_York
 
 title: Robert 'Bob' Caddy                          # the main title
 
-tagline: Ph.D Candidate, Third Year
+tagline: Ph.D Candidate, Fourth Year
          University of Pittsburgh   # it will display as the sub-title
 
 description: >-                        # used by seo meta and the atom feed
