End of week blog post

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "Decadal",
         "disqus",
         "Einfeldt",
+        "ENZO",
         "Laney",
         "Miniati",
         "Miyoshi",
