End of week update

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "Alfvên",
         "Decadal",
         "disqus",
+        "Draine",
         "Einfeldt",
         "ENZO",
         "Laney",
@@ -10,6 +11,7 @@
         "Miyoshi",
         "Munz",
         "pthreads",
-        "Teuben"
+        "Teuben",
+        "Zotero"
     ]
 }
