--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,11 +6,14 @@
         "Draine",
         "Einfeldt",
         "ENZO",
+        "favicons",
+        "giscus",
         "Laney",
         "Miniati",
         "Miyoshi",
         "Munz",
         "pthreads",
+        "swcache",
         "Teuben",
         "Zotero"
     ]
