End of week blog post

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,6 +15,9 @@
         "pthreads",
         "swcache",
         "Teuben",
-        "Zotero"
+        "Zotero",
+        "Pakmer",
+        "Pariev",
+        "Ntormousi"
     ]
 }
