--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "cSpell.words": [
         "Alfvên",
+        "Costanzo",
         "Decadal",
         "disqus",
         "Draine",
@@ -12,12 +13,12 @@
         "Miniati",
         "Miyoshi",
         "Munz",
+        "Ntormousi",
+        "Pakmer",
+        "Pariev",
         "pthreads",
         "swcache",
         "Teuben",
-        "Zotero",
-        "Pakmer",
-        "Pariev",
-        "Ntormousi"
+        "Zotero"
     ]
 }
