--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
         "ENZO",
         "favicons",
         "giscus",
+        "IHPCSS",
         "Laney",
         "Miniati",
         "Miyoshi",
