Update website from v5.1.0 to v5.2.1

--- a/_config.yml
+++ b/_config.yml
@@ -119,6 +119,8 @@ assets:
      # only works if `assets.self_host.enabled` is 'true'
      env:          # [development|production]
 
+pwa:
+  enabled: true   # the option for PWA feature
 
 paginate: 10
 
@@ -187,6 +189,7 @@ exclude:
   - '*.gemspec'
   - tools
   - README.md
+  - CHANGELOG.md
   - LICENSE
   - gulpfile.js
   - node_modules
