Add guides from github gists

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,10 @@
 {
     "cSpell.words": [
         "Alfvên",
+        "Bazel",
+        "bmatrix",
         "Costanzo",
+        "cudacpp",
         "Decadal",
         "disqus",
         "Draine",
