--- a/_config.yml
+++ b/_config.yml
@@ -60,7 +60,7 @@ google_site_verification: # change to your verification string
 
 
 google_analytics:
-  id:               # fill in your Google Analytics ID
+  id: G-ZNRHFV8Y4B # fill in your Google Analytics ID
   # Google Analytics pageviews report settings
   pv:
     proxy_endpoint:   # fill in the Google Analytics superProxy endpoint of Google App Engine
