End of week blog post

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -24,8 +24,9 @@
         "swcache",
         "Teuben",
         "Zotero",
-        "Felker"
-    ]
+        "Felker",
+        "PEARC"
+    ],
     "files.defaultLanguage": "markdown",
     "markdownlint.config": {
         "MD037": false
