--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ Gemfile.lock
 
 # Jekyll cache
 .jekyll-cache
+.jekyll-metadata
 _site
 
 # RubyGems
@@ -18,5 +19,6 @@ package-lock.json
 .idea
 
 # Misc
+_sass/dist
 assets/js/dist
 .DS_Store
